--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v4
-      - run: g++ main.cpp my_add.cpp -o main.cpp
+      - run: g++ main.cpp my_add.cpp -o main
       - run: ./main 4 6
