--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,4 +8,26 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y cmake
       - run: g++ main.cpp my_add.cpp -o main
       - run: mkdir build && cmake -B build -S . && cmake --build build 
-      - run: ./build/tests
+      - uses: action/upload-artifactv4
+        with:
+          name: binaries
+          path:
+            build/main
+            build/tests
+
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifactv4
+        with:
+          name: binaries
+      - run: chmod +x tests && ./tests
+
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifactv4
+        with:
+          name: binaries
+      - run: chmod +x tests && ./main 3 10
