--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y cmake
       - run: g++ main.cpp my_add.cpp -o main
       - run: mkdir build && cmake -B build -S . && cmake --build build 
-      - uses: action/upload-artifactv4
+      - uses: action/upload-artifact@v4
         with:
           name: binaries
           path:
@@ -19,7 +19,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifactv4
+      - uses: actions/download-artifact@v4
         with:
           name: binaries
       - run: chmod +x tests && ./tests
