--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifactv4
+      - uses: actions/download-artifact@v4
         with:
           name: binaries
       - run: chmod +x tests && ./main 3 10
