--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y cmake
       - run: g++ main.cpp my_add.cpp -o main
       - run: mkdir build && cmake -B build -S . && cmake --build build 
-      - uses: action/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: binaries
           path:
@@ -17,6 +17,7 @@ jobs:
 
 
   tests:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
@@ -25,6 +26,7 @@ jobs:
       - run: chmod +x tests && ./tests
 
   run:
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
