--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: sudo apt-get update && sudo apt-get install -y cmake
       - run: g++ main.cpp my_add.cpp -o main
-      - run: mkdir build && cmake -B build -S . && cmake --build build 
+      - run: cmake -B build -S . && cmake --build build 
       - uses: actions/upload-artifact@v4
         with:
           name: binaries
