--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,8 +6,10 @@ jobs:
     steps: 
       - uses: actions/checkout@v4
       - run: sudo apt-get update && sudo apt-get install -y cmake
+      
       - run: g++ main.cpp my_add.cpp -o main
-      - run: mkdir build && cmake -B build -S . && cmake --build build 
+      # - run: mkdir build && cmake -B build -S . && cmake --build build 
+      - run: mkdir -p build && cmake -B build -S . && cmake --build build
       - uses: actions/upload-artifact@v4
         with:
           name: binaries
