--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,11 +7,23 @@ jobs:
       - uses: actions/checkout@v4
       - run: sudo apt-get update && sudo apt-get install -y cmake
       - run: g++ main.cpp my_add.cpp -o main
-      - run: mkdir build && cmake -B build -S . && cmake --build build 
+      # - run: mkdir build && cmake -B build -S . && cmake --build build 
+      - run: |
+          mkdir build
+          cd build
+          cmake ..
+          cmake --build . 
+
+      # - uses: actions/upload-artifact@v4
+      #   with:
+      #     name: binaries
+      #     path:
+      #       build/main
+      #       build/tests
       - uses: actions/upload-artifact@v4
         with:
           name: binaries
-          path:
+          path: |
             build/main
             build/tests
 
