--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,3 +45,13 @@ jobs:
         with:
           name: binaries
       - run: chmod +x main && ./main 3 10
+ 
+  bench:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: binaries
+      - run: chmod +x main && ./my_bench
+
