--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,7 @@ jobs:
           path: |
             build/main
             build/tests
+            build/my_bench
 
 
   tests:
@@ -53,5 +54,5 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: binaries
-      - run: chmod +x main && ./my_bench
+      - run: chmod +x my_bench && ./my_bench
 
